--- a/LearnSDL/LearnSDL.vcxproj
+++ b/LearnSDL/LearnSDL.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="enemy.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="gameObject.cpp" />
+    <ClCompile Include="inputHandler.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="sdlGameObject.cpp" />
@@ -31,6 +32,7 @@
     <ClInclude Include="enemy.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="gameObject.h" />
+    <ClInclude Include="inputHandler.h" />
     <ClInclude Include="loaderParams.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="sdlGameObject.h" />
